# libv

./: .clang-format  .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  LIBV-TODO.md  LICENSE  README.md  TODO  TODO.md
Data/Model/: asteroid_03.dae.pb.vm3  fighter_01_eltanin.dae.pb.vm3  projectile_missile_01_hellfire.0001.dae.pb.vm3  test_sp.dae.pb.vm3
Data/Shader/: debug0.fs
Data/Texture/: noemission.dds
app/: binary_to_source.cpp  enum_generator.cpp  fsw.cpp  lua_runner.cpp
app/codegen/: codegen_main.cpp
app/editor/: CMakeLists.txt  editor_main.cpp
app/enum/: _legacy_enum_generator.hpp  enum_main.cpp  example.hpp
app/gen_ui_theme/: canvas.hpp  effect.hpp  engine.cpp  engine.hpp  gen_ui_theme.cpp  image.hpp  theme.hpp  theme_slate.lua  theme_slate_raster_in_lua.lua
app/mimp/: _vm4_viewer.hpp  lua_driver.cpp  lua_driver.hpp  mimp_main.cpp
app/natp/: natp_server_main.cpp
app/space/: _idea_console.hpp  _idea_cto.lua  camera.cpp  camera.hpp  camera_3.hpp  camera_behaviour.cpp  camera_behaviour.hpp  camera_control.cpp  camera_control.hpp  canvas.cpp  canvas.hpp  canvas_behaviour.cpp  canvas_behaviour.hpp  canvas_control.cpp  canvas_control.hpp  command.hpp  console.hpp  cto.cpp  cto.hpp  frame.hpp  frustum.hpp  fwd.hpp  game_instance.cpp  game_instance.hpp  game_session.cpp  game_session.hpp  game_thread.cpp  game_thread.hpp  hud.cpp  hud.hpp  icon_set.cpp  icon_set.hpp  icons.cpp  icons.hpp  internal_events.hpp  lobby.hpp  log.hpp  make_shader_error_overlay.cpp  make_shader_error_overlay.hpp  message_control.hpp  (+26 more)
app/star/: .gitignore  CMakeLists.txt  LIBV-STAR-TODO.txt  log.hpp  star_main.cpp  style.lua  version.cpp  version.cpp.in  version.hpp
app/star_test/: CMakeLists.txt
app/surface/: SURFACE-TODO.txt  fwd.hpp  log.hpp  style.lua  surface_main.cpp
app/theme/: canvas.hpp  effect.hpp  engine.cpp  engine.hpp  image.hpp  log.hpp  main.cpp  theme.hpp  theme_main.cpp  theme_slate.lua  theme_slate_4quad.lua
app/update/: apply_patch.cpp  apply_update.cpp  client_main.cpp  create_patch.cpp  create_update.cpp  idea.cpp  resource_server_main.cpp  server_main.cpp  update_server_main.cpp
app/vm4_viewer/: attribute.hpp  camera.hpp  canvas_3D.cpp  canvas_3D.hpp  config.hpp  console.hpp  frame.cpp  frame.hpp  light.hpp  log.hpp  main.cpp  model.cpp  model.fs  model.hpp  panel_viewer.cpp  panel_viewer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader_loader.cpp  shader_loader.hpp  shader_model.hpp  version.hpp  viewer_info_panel.cpp  viewer_info_panel.hpp  viewer_ui.cpp  viewer_ui.hpp
cicd/: jenkinsfile  star.jenkinsfile
cmake/: _idea.cmake  _wish.cmake  ext_boost.cmake  target.cmake  util.cmake  wish.cmake  wish_compiler_flags.cmake  wish_configuration.cmake  wish_create.cmake  wish_date.cmake  wish_git.cmake  wish_system.cmake  wish_util.cmake  wish_version.cmake  wish_warning.cmake
cmake/experimental/: wish_ccache.cmake
example/: vgl_main.cpp  vgl_main2.cpp  vl_main.cpp  vm3_main.cpp  vm3imp_main.cpp  vsig_main.cpp  vui_main.cpp  vui_main2.cpp
include/libv/: adaptor.hpp  array.hpp  cache.hpp  defines.hpp  delayed_dispatcher.hpp  dynamic_visitor.hpp  efl.hpp  fixed.hpp  log.hpp  memory.hpp  multi_type_map.hpp  property_map.hpp  read_file.hpp  resource.hpp  scoped_cache.hpp  semaphore.hpp  sml.hpp  string.hpp  task_flag.hpp  timer.hpp  tuple.hpp  type_traits.hpp  utf8.hpp  utility.hpp  varidic_map.hpp  vec.hpp  view.hpp  void_guard.hpp  worker_thread.hpp
include/netts/: buffer.hpp  internet.hpp  net.hpp
include/outcome/: outcome.hpp
include/vl/: array.hpp  cache.hpp  context.hpp  context_id.hpp  delayed_dispatcher.hpp  dependent_task.hpp  dynamic_visitor.hpp  efl.hpp  file_system.hpp  invoke_que.hpp  log.hpp  memory.hpp  operator.hpp  read_file.hpp  resource.hpp  resource_manager.hpp  semaphore.hpp  string.hpp  task_flag.hpp  timer.hpp  tuple.hpp  type_traits.hpp  utility.hpp  varidic_map.hpp  vec.hpp  void_guard.hpp  worker_thread.hpp
note/: CICD-TODO.txt  LIBV-AUDIO-TODO.txt  LIBV-CTRL-TODO.txt  LIBV-GAME-TODO.txt  LIBV-NET-TODO.txt  LIBV-NOISE-TODO.txt  LIBV-RE-TODO.txt  LIBV-RES-TODO.txt  LIBV-REV-TODO.txt  LIBV-SPACE-TODO.txt  LIBV-TODO.txt  LIBV-UI-TODO.txt  SPRINT-TODO.txt
res/model/: Tree_med.fixed.game.lua  Tree_med.fixed.game.vm4  asteroid_02.dae.pb.vm3  building_delnan_16P_tex.0038_med.game.fbx  building_delnan_16P_tex.0038_med.game.lua  building_delnan_16P_tex.0038_med.game.vm4  fighter_01_eltanin.0006_med.fixed.game.fbx  fighter_01_eltanin.0006_med.fixed.game.vm4  fighter_01_eltanin.0006_med.game.fbx  fighter_01_eltanin.0006_med.game.vm4  fighter_01_eltanin.dae  fighter_01_eltanin.fbx  fighter_01_eltanin.lua  fighter_01_eltanin.vm4  model_test_file.json.vm4  projectile_missile_01_hellfire.0005_med.game.fbx  projectile_missile_01_hellfire.0005_med.game.vm4  stone_01.fbx  stone_01.lua  stone_01.vm4  tank_01_rocket_ring.0030_med.game.fbx  tank_01_rocket_ring.0030_med.game.vm4  tank_01_rocket_ring.0031_med.game.fbx  tank_01_rocket_ring.0031_med.game.vm4  test_sphere.fbx  (+41 more)
sandbox/: libv_benchmark_main.cpp  libv_colony_main.cpp  libv_container_main.cpp  libv_control_main.cpp  libv_coro_main.cpp  libv_coro_mt_main.cpp  libv_ctrl_main.cpp  libv_ctrl_main_dll.cpp  libv_ctrl_main_foo.cpp  libv_diff_main.cpp  libv_ecs_main.cpp  libv_frame_main.cpp  libv_fsw_main.cpp  libv_gl_main.cpp  libv_gl_main2.cpp  libv_gl_main3.cpp  libv_gl_runner.hpp  libv_glr_main.cpp  libv_glr_main2.cpp  libv_glr_main3.cpp  libv_img_main.cpp  libv_immer_main.cpp  libv_log_main.cpp  libv_lua_main.cpp  libv_main.cpp  libv_member_main.cpp  libv_monitor_main.cpp  libv_mt_main.cpp  libv_net_client_main.cpp  libv_net_main.cpp  libv_net_server_main.cpp  libv_noise_main.cpp  libv_openssl_main.cpp  libv_physics_main.cpp  libv_reflection2_main.cpp  libv_reflection_main.cpp  libv_rev_main.cpp  libv_rev_res_main.cpp  libv_security_main.cpp  libv_serialize_cereal_main.cpp  (+26 more)
src/: vl_main.cpp  vsig_main.cpp  vui_main.cpp  vui_main2.cpp
test/: libv_reporter.hpp  minimal_reporter.hpp  runner.cpp  runner.inl  simple_reporter.hpp  vcomp_reporter.hpp
(+2785 files in other folders)
